--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "styled-components": "^6.1.9",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
